<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    
    <string name="OA0000">Agenda</string>
    <string name="OA0001">Trombi</string>
    <string name="OA0002">Setting</string>
    <string name="OA0003">Exit</string>
    <string name="OA0004">Network is not available</string>
    <string name="OA0005">Login</string>
    <string name="OA0006">Logout</string>
    
    <string name="OA1000">Welcome to OPAM</string>
    <string name="OA1001">OPAM</string>
    <string name="OA1002">login</string>
    <string name="OA1003">password</string>
    <string name="OA1004">Input your login, please!</string>
    <string name="OA1005">Input your password, please!</string>
    <string name="OA1006">Please wait while checking your login and password...</string>
    <string name="OA1007">Checking</string>
    <string name="OA1008">Retry</string>
    
    <string name="OA2000">Update</string>
    <string name="OA2001">Charge</string>
    <string name="OA2002">Last Month</string>
    <string name="OA2003">Number of courses</string>
    <string name="OA2004">Local data update time</string>
    <string name="OA2005">Last failed update time</string>
    <string name="OA2006">Failed reason</string>
    <string name="OA2007">Month Info</string>
    <string name="OA2008">Find course for a date</string>
    <string name="OA2009">No error</string>
    <string name="OA2010">Unknown error</string>
    <string name="OA2011">Exception error</string>
    <string name="OA2012">INT server error</string>
    <string name="OA2013">Bad http status error</string>
    <string name="OA2014">Bad html content error</string>
    <string name="OA2015">Login failed error</string>
    <string name="OA2016">Time</string>
    <string name="OA2017">Edit</string>
    <string name="OA2018">Next Month</string>
    <string name="OA2019">Error</string>
    <string name="OA2020">The course of %1$s (%2$d courses) is successful downloaded. Do you want to load them?</string>
    <string name="OA2021">Failed to download courses for %1$s : %2$s</string>
    <string name="OA2022">Can\'t find course for %1$s. Do you want to download them?</string>
    <string name="OA2023">Go to today</string>
    <string name="OA2024">Search class</string>
    <string name="OA2025">This Month</string>
    
    <string name="OA3000">First name or last name</string>
    <string name="OA3001">search</string>
    <string name="OA3002">Result</string>
    
    <string name="OA4000">Calendar Time Range</string>
    <string name="OA4001">Google Calendar Auto Sync</string>
    <string name="OA4002">Auto-Login</string>
    <string name="OA4003">New Version Notification</string>
    <string name="OA4004">App version</string>
    
    <string name="OA5000">Class Name</string>
    <string name="OA5001">Teacher</string>
    <string name="OA5002">Group</string>
    <string name="OA5003">Type</string>
    <string name="OA5004">Room</string>
    <string name="OA5005">Class Background Color</string>

</resources>
