<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content" 
    android:layout_width="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:background="@drawable/important_bg">
    
    <ImageView 
      android:id="@+id/bgID"  
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/logo"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bgID"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:text="@string/OA1000"
        android:textColor="#2125e2"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bgID"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_layout"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txtID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:completionHint="@string/OA1002"
                android:completionThreshold="1"
                android:drawableLeft="@drawable/user_logo"
                android:ems="10"
                android:hint="@string/OA1002"
                android:shadowColor="#ff0000"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textColorHint="#238745" >
                <requestFocus />
            </AutoCompleteTextView>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pw_input_layout"
            android:layout_below="@+id/login_input_layout"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtMDP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/password_logo"
                android:ems="10"
                android:hint="@string/OA1003"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textColorHint="#238745" />

        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/switch_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pw_input_layout"
            android:layout_marginTop="20dp"
            android:text="Remember Me" />

        <Button
            android:id="@+id/btnVAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/pw_input_layout"
            android:layout_below="@+id/switch_remember_me"
            android:layout_marginTop="20dp"
            android:text="@android:string/ok"
            android:textColor="@color/black" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:text="OpenPortal Agenda mobile" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/tsp_logo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/tem_logo" />

</RelativeLayout>
